[tool.poetry]
name = "rq-python-example"
version = "0.1.0"
description = ""
authors = ["Lui Pillmann <lui.pillmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
rq = "^1.7.0"
Flask-SQLAlchemy = "^2.4.4"
requests = "^2.25.1"
ipython = "^7.20.0"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
